syntax = "proto3";
package seguepb;

message UnitTestData {
	string 		testMessage 				= 1;
}
